<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_marginTop="20dp"
    tools:context=".Activities.EditTask"
    app:dividerPadding="50dp"
    >

    <TextView
        android:id="@+id/editTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:text="@string/edit_this_task"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/taskName"
        android:inputType="textPersonName"
        android:paddingBottom="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/create_checklist"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:dividerPadding="10dp"
        android:background="@drawable/custom_layout_border"
        android:layout_marginTop="5dp"
        >


        <Button
            android:id="@+id/editSubTaskBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/milestone_button"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/addSubTaskButton"
            android:textColor="@color/text_white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/editSubTaskList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_tap_on_milestone_to_delete_it"
        android:textSize="16sp"
        android:paddingBottom="20dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/custom_layout_border"
        android:showDividers="end"

        >

        <Button
            android:id="@+id/editDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/deadline_buttons"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/edit_date"
            android:textColor="@color/text_white" />

        <TextView
            android:id="@+id/editDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingBottom="8dp"
            android:paddingRight="10dp"
            android:textSize="24sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/custom_layout_border"
        android:showDividers="middle"
        android:layout_marginTop="10dp"
        >

        <Button
            android:id="@+id/editTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_time"
            android:textColor="@color/text_white"
            android:background="@drawable/deadline_buttons"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

        <TextView
            android:id="@+id/editDeadlineTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingBottom="8dp"
            android:paddingRight="10dp"
            android:textSize="24sp" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/remind_me"/>

        <NumberPicker
            android:id="@+id/editDaysPicker"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/editDaysBefore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/days_before_this_task_is_due"/>


    </LinearLayout>

    <EditText
        android:id="@+id/editNotesTextArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxLines="150"
        android:hint="@string/notes"
        android:background="@drawable/custom_layout_border"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:padding="10dp"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/custom_button_red"
                android:onClick="goToMain"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingBottom="15dp"
                android:paddingTop="10dp"
                android:text="@string/cancel"
                android:textColor="@color/text_white" />

            <Button
                android:id="@+id/editTaskButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/custom_button_green"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:paddingTop="10dp"
                android:text="@string/edit_task"
                android:textColor="@color/text_white" />


        </LinearLayout>


    </RelativeLayout>


</LinearLayout>
</androidx.core.widget.NestedScrollView>